logs/nmrpystar.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/NMRPyStar-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/nmrpystar'...
Listing './lib/python3.5/site-packages/nmrpystar/examples'...
Compiling './lib/python3.5/site-packages/nmrpystar/examples/full.py'...
***   File "./lib/python3.5/site-packages/nmrpystar/examples/full.py", line 36
    print result
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/nmrpystar/examples/loading.py'...
***   File "./lib/python3.5/site-packages/nmrpystar/examples/loading.py", line 55
    print json.dumps(parseStdin()[1].toJSONObject())
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/nmrpystar/examples/queries.py'...
***   File "./lib/python3.5/site-packages/nmrpystar/examples/queries.py", line 8
    print 'chemical shift: ', \
                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/nmrpystar/nmrstarast.py'...
***   File "./lib/python3.5/site-packages/nmrpystar/nmrstarast.py", line 194
    except ASTError, e:
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/nmrpystar/test'...
Compiling './lib/python3.5/site-packages/nmrpystar/test/testcleantokens.py'...
***   File "./lib/python3.5/site-packages/nmrpystar/test/testcleantokens.py", line 28
    print message, res
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/nmrpystar/test/testscanner.py'...
***   File "./lib/python3.5/site-packages/nmrpystar/test/testscanner.py", line 62
    print message
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/nmrpystar/unparse'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
